// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Layout should handle "disabledOn" prop 1`] = `
<div>
  <div
    class="layout disabled-xl disabled-xs"
  >
    Hello, world!
  </div>
</div>
`;

exports[`Layout should renders correctly 1`] = `
<div>
  <div
    class="layout test-class "
    style="height: 128px;"
  >
    Hello, world!
  </div>
</div>
`;

exports[`Layouts (legacy) should handle "disabledOn" prop 1`] = `
<div>
  <div
    class="layout desktop disabled-xl disabled-xs"
  >
    Hello, world!
  </div>
</div>
`;

exports[`Layouts (legacy) should handle "disabledOn" prop 2`] = `
<div>
  <div
    class="layout mobile disabled-xl disabled-xs"
  >
    Hello, world!
  </div>
</div>
`;

exports[`Layouts (legacy) should handle "element" prop 1`] = `
<div>
  <main
    class="layout desktop test-class "
    style="height: 128px;"
  >
    Hello, world!
  </main>
</div>
`;

exports[`Layouts (legacy) should handle "element" prop 2`] = `
<div>
  <main
    class="layout mobile test-class "
    style="height: 128px;"
  >
    Hello, world!
  </main>
</div>
`;

exports[`Layouts (legacy) should renders correctly 1`] = `
<div>
  <div
    class="layout desktop test-class "
    style="height: 128px;"
  >
    Hello, world!
  </div>
</div>
`;

exports[`Layouts (legacy) should renders correctly 2`] = `
<div>
  <div
    class="layout mobile test-class "
    style="height: 128px;"
  >
    Hello, world!
  </div>
</div>
`;
